Added write message to chat as Botana feature

--- a/style.css
+++ b/style.css
@@ -55,3 +55,10 @@ html {
 .message_time {
 	color: #9e9e9e;
 }
+
+img {
+	vertical-align: text-bottom;
+    border-style: none;
+    margin-left: 2px;
+    margin-right: 4px;
+}
