--- a/style.css
+++ b/style.css
@@ -7,12 +7,13 @@ html {
 	margin-bottom: 5px;
 	margin-right: 5px;
 	margin-left: 5px;
+	font-size: 0.9rem;
 }
 
 #message-window {
 	overflow-y: auto;
-	width: 98%;
-	height: 99%;
+	/*width: 98%;
+	height: 99%;*/
 }
 
 #message-window > span{
@@ -20,31 +21,46 @@ html {
 }
 
 #input-container {
-	position: fixed;
-	bottom: 0;
+    position: fixed;
+    bottom: 0;
+    left: 5px;
+    right: 5px;
 }
 
 .input-list{
 	display: flex;
+    flex-direction: column;
+    margin-bottom: 0.2em;
 }
 
 #content_input {
-	min-width: 10%
+	background-color: #f2f2f2;
+    font-size: 0.9rem;
+}
+
+#content_input:focus {
+	background-color: white;
 }
 
 .form-group {
-    margin-right: 0.2rem;
+    margin-bottom: 0.3rem !important;
 }
 
 .form-control:focus {
-    background-color: #fff !important;
+    background-color: #f    margin-bottom: 0.5rem;ff !important;
     border-color: #b39cd2 !important;
     box-shadow: 0 0 0 0.1rem #b39cd2 !important;
+}
+
+#form-btn-container {
+    display: flex;
+    justify-content: flex-end;
 }
 
 #send-msg-btn {
 	background-color: #815fc0;
 	border-color: #815fc0;
+	font-size: 0.9rem;
 }
 
 #send-msg-btn:hover {
@@ -54,10 +70,11 @@ html {
 
 .message_time {
 	color: #9e9e9e;
+	margin-right: 2px;
 }
 
 img {
-	vertical-align: text-bottom;
+	vertical-align: bottom;
     border-style: none;
     margin-left: 2px;
     margin-right: 4px;
