--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ html {
 }
 
 img {
-	vertical-align: bottom;
+	vertical-align: sub !important;
     border-style: none;
     margin-left: 2px;
     margin-right: 4px;
